# selma

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: advanced_system.py  basic_usage.py  example_advanced.py  example_basic.py  example_intermediate.py  intermediate_projec.py
src/selma/: __init__.py  __main__.py  api.py  public_api.py  service.py  sizing.py
src/selma/core/: load.py  normalization.py  results.py
src/selma/data/: loader.py  loaders.py
src/selma/data/aea90364/: __init__.py  constants.json  factors.json
src/selma/data/standards/aea90364/: __init__.py  wires.json
src/selma/electrical/: ampacity.py  conductor.py  constants.py  correction.py  lookup.py
src/selma/electrical/protection/: selector.py
src/selma/electrical/short_circuit/: adiabatic.py
src/selma/electrical/voltage_drop/: gdc.py  impedance.py  router.py
src/selma/exporters/: __init__.py  _legacy_markdown.py  common.py  detailed.py  executive.py  utils.py  visual.py
src/selma/factors/: calculator.py
src/selma/infrastructure/: logging.py
src/selma/models/: domains.py  schemas.py
src/selma/protection/: protection.py
src/selma/selection/: sections.py
src/selma/short_circuit/: adiabatic.py
src/selma/sources/: constants.py
src/selma/tables/: ampacity.py  lookup.py
src/selma/templates/: DV-E-LV-MC-Wires.md
src/selma/validation/: input.py  validators.py
src/selma/voltage_drop/: gdc.py  impedance.py  router.py
tests/: test_engine_regression.py
