[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selma"
version = "3.0.0"
description = "Standardized Electrical Load and Modeling Assistant (SELMA)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "Daniel Alejandro Villena Hernandez", email = "ingenierovillena@gmail.com" }
]

keywords = [
    "electrical",
    "aea90364",
    "cable sizing",
    "ampacity",
    "power systems"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/davillenah/selma"
Repository = "https://github.com/davillenah/selma"

# -------------------------------------------------------
# PACKAGE DISCOVERY
# -------------------------------------------------------

[tool.setuptools.packages.find]
where = ["src"]

# -------------------------------------------------------
# PACKAGE DATA (CRÍTICO)
# -------------------------------------------------------

[tool.setuptools.package-data]
selma = [
    "templates/*.md",
    "data/**/*.json"
]

# -------------------------------------------------------
# PYTEST
# -------------------------------------------------------

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

# -------------------------------------------------------
# RUFF
# -------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

exclude = [
    "tests/debug_engine.py",
    "tests/test_config.py",
    "tests/test_engine.py"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/debug_engine.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"