[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selma"
version = "3.1.0"
description = "Standardized Electrical Load and Modeling Assistant (SELMA)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "Daniel Alejandro Villena Hernandez", email = "ingenierovillena@gmail.com" }
]

keywords = [
    "electrical",
    "aea90364",
    "cable sizing",
    "ampacity",
    "power systems"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/davillenah/selma"
Repository = "https://github.com/davillenah/selma"

# -------------------------------------------------------
# PACKAGE DISCOVERY
# -------------------------------------------------------

[tool.setuptools.packages.find]
where = ["src"]

# -------------------------------------------------------
# PACKAGE DATA (CRÍTICO)
# -------------------------------------------------------

[tool.setuptools.package-data]
selma = [
    "exporters/templates/*.md",
    "data/standards/**/*.json"
]


# -------------------------------------------------------
# PYTEST
# -------------------------------------------------------

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

# -------------------------------------------------------
# RUFF (LINT + FORMAT)
# -------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 100

exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

# -------------------------------------------------------
# LINT RULES
# -------------------------------------------------------

[tool.ruff.lint]

select = [
    "E",   # pycodestyle (errors)
    "F",   # pyflakes
    "I",   # imports (isort)
    "B",   # bugbear (errores sutiles reales)
    "UP",  # modernización (pyupgrade)
    "ARG", # unused arguments
    "RET", # returns
    "SIM", # flake8-simplify (simplificación de código)
]

ignore = [
    "E501",  # line-length manejado por formatter
]

# -------------------------------------------------------
# PER-FILE RULES
# -------------------------------------------------------

[tool.ruff.lint.per-file-ignores]

# prints permitidos en debugging
"tests/**/*.py" = ["T201"]

# -------------------------------------------------------
# IMPORT SORTING (ISORT)
# -------------------------------------------------------

[tool.ruff.lint.isort]

known-first-party = ["selma"]
combine-as-imports = true

# -------------------------------------------------------
# FORMATTER
# -------------------------------------------------------

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
line-ending = "auto"